--- a/FakerLib.Tests/FakerLib.Tests.csproj
+++ b/FakerLib.Tests/FakerLib.Tests.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="NLog" Version="4.7.6" />
+    <PackageReference Include="NLog.Config" Version="4.7.6" />
   </ItemGroup>
 
   <ItemGroup>
